[package]
name = "klon"
version = "1.1.1"
authors = ["William R. Fraser <wfraser@codewise.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = "0.2.0"
libc = "0.2"
rand = { version = "0.7.3", default-features = false }
rand_pcg = "0.2.1"

[dependencies.pancurses]
version = "0.16.1"
# Run in the win32 console host, not in an extra window.
# This limits the graphics significantly, however.
features = ["win32"]
